[package]
name = "tstools"
version = "0.1.5"
authors = ["toshi_pp <toshiq2@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "^0.4"
env_logger = "^0.5.13"
jisx0213 = { path = "jisx0213" }
chrono = { version = "^0.4", features = ["serde"] }
serde_json = "^1.0"
serde_derive = "^1.0"
serde = "^1.0"
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.7"
tokio-util = { version = "0.6.8", features = ["codec"] }
bytes = "1.0"
structopt = "^0.2"
arib_symbols = { path = "arib_symbols" }
md-5 = "^0.8.0"

[workspace]
members = [
       "jisx0213",
       "arib_symbols",
]
