[package]
name = "tstools"
version = "0.1.7"
authors = ["toshi_pp <toshiq2@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.9"
jisx0213 = { path = "jisx0213" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde_derive = "1"
serde = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
arib_symbols = { path = "arib_symbols" }
md-5 = "0.10"
clap = { version = "4", features = ["derive"] }

[workspace]
members = [
       "jisx0213",
       "arib_symbols",
]
